# message-dispatcher-api

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/src/service/: app.py  config.py  services.py
app/src/service/db/: __init__.py
app/src/service/models/: recipient_messages.py
app/src/service/schemas/: __init__.py  message.py  utility.py
app/tests/: conftest.py  test_contract.py  test_recipient_messages_services.py
