[project]
name = "message-dispatcher-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem Sliusarenko",email = "sliusarenko.artem@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard](>=0.116.1,<0.117.0)",
    "boto3 (>=1.40.25,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.11"
pyright = "^1.1.405"

